<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fragment_edit_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/rectangle_border"
        android:hint="@string/oldpwd"
        android:inputType="textPassword"
        android:padding="@dimen/_5sdp" />

    <EditText
        android:id="@+id/fragment_edit_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/rectangle_border"
        android:hint="@string/newpwd"
        android:inputType="textPassword"
        android:padding="@dimen/_5sdp" />

    <EditText
        android:id="@+id/fragment_edit_password_renew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/rectangle_border"
        android:hint="@string/repwd"
        android:inputType="textPassword"
        android:padding="@dimen/_5sdp" />

    <TextView
        android:id="@+id/fragment_edit_password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/green"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp" />
</LinearLayout>