<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/drawerView"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <LinearLayout
                android:id="@+id/activity_main_navigation_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_main_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/home"
                    android:textColor="@color/graytextcolor"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:id="@+id/activity_main_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/order"
                    android:textColor="@color/toolBarPink"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:id="@+id/activity_main_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/setting"
                    android:textColor="@color/graytextcolor"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:id="@+id/activity_main_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/logout"
                    android:textColor="@color/graytextcolor"
                    android:textSize="@dimen/_20sdp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/activity_main_navigation_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/layout_toolbar" />
        </RelativeLayout>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>