<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lets_go"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/twentytoolBarPink"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    tools:context="com.app.archirayan.teamon.Activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/activity_lets_go_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/activity_lets_go_aboutyou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="All the sales in the apps can shiping to \n you for free or pick from the stores (what \n that you like to) so we need some details \n about you"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/activity_lets_go_editfullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/share_pagegray_lyout"
                android:gravity="center"
                android:hint="@string/fullname"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/activity_lets_go_editcountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/share_pagegray_lyout"
                android:gravity="center"
                android:hint="@string/country"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/activity_lets_go_editaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/share_pagegray_lyout"
                android:gravity="center"
                android:hint="@string/address"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/activity_lets_go_editzipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/share_pagegray_lyout"
                android:gravity="center"
                android:hint="@string/zipcode"
                android:maxLength="6"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/activity_lets_go_editpono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/share_pagegray_lyout"
                android:gravity="center"
                android:hint="@string/pono"
                android:inputType="number"
                android:maxLength="11"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/activity_lets_go_editletsgo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/signin_bg_signbtn"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/ltsgo"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
