<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    android:orientation="vertical"
    android:padding="@dimen/_3sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/ivBack_dialogStoreDetails"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@drawable/back_arrow"
                    android:gravity="center"
                    android:orientation="vertical" />
            </LinearLayout>


            <ImageView
                android:id="@+id/image_dialog_storedetails"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:src="@drawable/ic_placeholder" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/white"
            android:gravity="left|center_vertical"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/about"
            android:textColor="@color/toolBarPink"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/text_dialog_storedetails_aboutstore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="left"
            android:maxHeight="@dimen/_180sdp"
            android:minHeight="@dimen/_80sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/decabout"
            android:textColor="@color/splashdetailcolor"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/white"
            android:gravity="left|center_vertical"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/addrs"
            android:textColor="@color/toolBarPink"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/text_dialog_storedetails_addressstore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="left"
            android:maxHeight="@dimen/_175sdp"
            android:minHeight="@dimen/_75sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:scrollbars="vertical"
            android:text="@string/decaddrs"
            android:textColor="@color/splashdetailcolor"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</ScrollView>