<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@color/toolBarPink">

        <ImageView
            android:id="@+id/fragment_navigation_setting_main_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/tool_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />

    </RelativeLayout>

    <!--<FrameLayout-->
    <!--android:id="@+id/fragment_navigation_setting_main_sub"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" />-->

    <TextView
        android:id="@+id/fragment_navigation_setting_main_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/textview_selected"
        android:padding="@dimen/_5sdp"
        android:text="@string/address"
        android:textSize="@dimen/_20sdp" />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/fragment_navigation_setting_main_expand_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="200"
        app:el_expanded="false">

        <ViewFlipper
            android:id="@+id/fragment_navigation_setting_main_address_vf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/fragment_edit_address"></include>

            <include layout="@layout/fragment_sucessfullyupdate_address"></include>
        </ViewFlipper>

    </net.cachapa.expandablelayout.ExpandableLayout>

    <TextView
        android:id="@+id/fragment_navigation_setting_main_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/textview_selected"
        android:padding="@dimen/_5sdp"
        android:text="@string/email"
        android:textSize="@dimen/_20sdp" />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/fragment_navigation_setting_main_expand_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="200"
        app:el_expanded="false">

        <ViewFlipper
            android:id="@+id/fragment_navigation_setting_main_email_vf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/fragment_edit_email"></include>

            <include layout="@layout/fragment_sucessfullyupdate_mail"></include>
        </ViewFlipper>
    </net.cachapa.expandablelayout.ExpandableLayout>

    <TextView
        android:id="@+id/fragment_navigation_setting_main_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/textview_selected"
        android:padding="@dimen/_5sdp"
        android:text="@string/password"
        android:textSize="@dimen/_20sdp" />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/fragment_navigation_setting_main_expand_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="200"
        app:el_expanded="false">

        <ViewFlipper
            android:id="@+id/fragment_navigation_setting_main_password_vf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/fragment_edit_password"></include>

            <include layout="@layout/fragment_sucessfullyupdate_password"></include>
        </ViewFlipper>


    </net.cachapa.expandablelayout.ExpandableLayout>

    <TextView
        android:id="@+id/fragment_navigation_setting_main_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/textview_selected"
        android:padding="@dimen/_5sdp"
        android:text="@string/notification"
        android:textSize="@dimen/_20sdp" />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/fragment_navigation_setting_main_expand_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="200"
        app:el_expanded="false">

        <include layout="@layout/fragment_edit_address"></include>

    </net.cachapa.expandablelayout.ExpandableLayout>
</LinearLayout>